Causeview Package Complete/src/objects/Gift_Detail__c.object
<CustomObject>
    <description>Causeview - Manages the allocation of your gifts across Funds, Appeals, Tributes, Products and Campaigns.</description>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <formula>Fund__r.Accounting_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_Date__c</fullName>
        <description>Date of allocation - referenced from Gift Payment</description>
        <inlineHelpText>Date of allocation - referenced from Gift Payment</inlineHelpText>
        <label>Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_GA_Eligible__c</fullName>
        <formula>If(Or(Is_Fund_GA_Eligible__c =false, Is_Payment_GA_Eligible__c=false),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation GA Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appeal_Name__c</fullName>
        <description>Name of appeal associated to gift.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Appeal__r.Id, Appeal__r.Appeal_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>No longer used by CauseView</description>
        <label>(DEPRECATED)</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Split_Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <formula>IF( $Setup.App_Settings__c.Enable_Pledge_Accrual_Accounting__c &amp;&amp; ISPICKVAL(Gift__r.Gift_Type__c, &quot;Pledge&quot;),
Amount__c,
IF(ISBLANK(Payment__c), 
0, 
IF(OR(
ISPICKVAL(Payment__r.Status__c, &quot;Declined&quot;), 
ISPICKVAL(Payment__r.Status__c, &quot;Pending&quot;), 
ISPICKVAL(Payment__r.Status__c, &quot;Written Off&quot;), 
ISPICKVAL(Payment__r.Status__c, &quot;ACH Return&quot;)), 
0,
IF(Payment__r.Amount__c = 0, 
0, 
Amount__c)
)
)
)</formula>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The campaign the appeal is related to.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Gift_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <formula>IF(ISBLANK( Gift__r.Organization__c ), HYPERLINK(&quot;/&quot; &amp; Gift__r.Constituent__c, Gift__r.Constituent__r.FirstName &amp; &quot; &quot; &amp; Gift__r.Constituent__r.LastName,&quot;_self&quot;), HYPERLINK(&quot;/&quot; &amp; Gift__r.Organization__c, Gift__r.Organization__r.Name,&quot;_self&quot;))</formula>
        <label>Constituent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Allocation_Text__c</fullName>
        <inlineHelpText>Used to capture any information that you would like to have copied onto the Allocation records created by the causeview system after payment insert.</inlineHelpText>
        <label>Custom Allocation Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description or note about allocation.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event level purchased as part of Transaction</description>
        <label>Event Level</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The event level does not belong to the event you have allocated to.</errorMessage>
            <filterItems>
                <field>$Source.New_Campaign__c</field>
                <operation>equals</operation>
                <valueField>Event_Level__c.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Level__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Fund__r.Id, Fund__r.Fund_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Fund__c.Inactive__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Gift_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Auto_Credit_Account__c</fullName>
        <description>Auto assigned GL Credit Account number - defined by Fund</description>
        <inlineHelpText>Auto assigned GL Credit Account number - defined by Fund</inlineHelpText>
        <label>GL Credit Account</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Auto_Debit_Account__c</fullName>
        <description>Auto assigned GL Debit Account number - defined by Fund</description>
        <inlineHelpText>Auto assigned GL Debit Account number - defined by Fund</inlineHelpText>
        <label>GL Debit Account</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <description>GL Code from designated fund</description>
        <formula>Fund__r.GL_Code__c</formula>
        <label>GL Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Credit_Account__c</fullName>
        <formula>Fund__r.GL_Credit__c</formula>
        <label>GL Formula Credit Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Debit_Account__c</fullName>
        <formula>Fund__r.GL_Debit__c</formula>
        <label>GL Formula Debit Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <formula>TEXT( Gift__r.Gift_Type__c )</formula>
        <label>Gift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <label>Transaction</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Gift_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Pledge Installment</description>
        <label>Installment</label>
        <referenceTo>Installment__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Donor_GA_Eligible__c</fullName>
        <formula>Payment__r.Gift_Aid_Declaration__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Donor GA Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fund_GA_Eligible1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fund GA Eligible1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fund_GA_Eligible__c</fullName>
        <formula>Fund__r.Gift_Aid_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Fund GA Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_GA_Eligible__c</fullName>
        <formula>and(Payment__r.Gift_Aid_Eligible__c,text(Payment__r.Status__c) = &quot;Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Payment GA Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Links transactions to Campaign/Appeals.</description>
        <label>Appeal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Campaign</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Transaction Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>Calculates number of attendees based on Event Level and quantity purchased</description>
        <formula>Event_Level__r.Attendees_per_Level__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of included attendees based on quantity and Event Level</inlineHelpText>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Deprecated field - combined into Constituent field</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Gift__r.Organization__c, Gift__r.Organization__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Direct Mail Code</inlineHelpText>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Appeal</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Allocations (Parent Appeal)</relationshipLabel>
        <relationshipName>Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Date of payment allocated</description>
        <formula>Payment__r.Date__c</formula>
        <inlineHelpText>Date of payment allocated</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Payment associated to the allocation record.</description>
        <inlineHelpText>Payment associated to the allocation record.</inlineHelpText>
        <label>Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Gift__c</field>
                <operation>equals</operation>
                <valueField>Payment__c.Donation__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Gift Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Allocation__c</fullName>
        <formula>IF(Gift__r.Expected_Amount__c &gt; 0, Amount__c/Gift__r.Expected_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Posted_to_Finance__c</fullName>
        <description>Date the allocation was posted to finance</description>
        <inlineHelpText>Date the transaction and payment were posted to finance</inlineHelpText>
        <label>Posted to Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The quantity of this that was purchased</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tribute</label>
        <referenceTo>Tribute__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Gift__c</columns>
        <columns>Allocation_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Approved_Amount__c</columns>
        <columns>New_Campaign__c</columns>
        <columns>Fund__c</columns>
        <columns>Posted_to_Finance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Allocations_with_GL_Codes</fullName>
        <columns>NAME</columns>
        <columns>Posted_to_Finance__c</columns>
        <columns>GL_Auto_Credit_Account__c</columns>
        <columns>GL_Auto_Debit_Account__c</columns>
        <columns>GL_Credit_Account__c</columns>
        <columns>GL_Debit_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GL_Auto_Credit_Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Allocations with GL Codes</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Allocation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EventLevelAndQuantity</fullName>
        <active>true</active>
        <description>Enforces Quantity is entered with Event Level and vice versa.</description>
        <errorConditionFormula>IF(OR(AND(NOT(ISBLANK( Event_Level__c )), ISBLANK( Quantity__c )), (AND(ISBLANK( Event_Level__c ), NOT(ISBLANK( Quantity__c ))))), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>You must enter both an Event Level and Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockFund</fullName>
        <active>true</active>
        <description>Locks Fund value if Allocation has been posted to finance.</description>
        <errorConditionFormula>AND(ISCHANGED( Fund__c ), NOT(ISBLANK( Posted_to_Finance__c )))</errorConditionFormula>
        <errorDisplayField>Fund__c</errorDisplayField>
        <errorMessage>You cannot change the Fund since the Allocation has been posted to finance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Event_Level_Change</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISCHANGED( Event_Level__c ),ISCHANGED( Quantity__c ))</errorConditionFormula>
        <errorMessage>You cannot modify Event Level or Quantity.</errorMessage>
    </validationRules>
</CustomObject>